spade-tests/src/snapshots/spade_tests__ast_lowering__type_param_defaults_must_be_packed_at_the_end.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct S<T = bool, U, V = ()> {}

fn test() {
    let _ = S();
}


error: Generic parameters with a default must be trailing
  ┌─ testinput:1:9
  │
1 │ struct S<T = bool, U, V = ()> {}
  │         ^^^^^^^^^^^^^^^^^^^^^
  │          │
  │          This parameter has a default and is not trailing
